@@ -94,6 +94,7 @@ class TImageMap extends TImage implements IPostBackEventHandler
 			$i=0;
 			$options['EventTarget'] = $this->getUniqueID();
 			$options['StopEvent'] = true;
+			$cs=$this->getPage()->getClientScript();
 			foreach($hotspots as $hotspot)
 			{
 				if($hotspot->getHotSpotMode()==='NotSet')
@@ -109,7 +110,7 @@ class TImageMap extends TImage implements IPostBackEventHandler
 					$options['EventParameter']="$i";
 					$options['CausesValidation']=$hotspot->getCausesValidation();
 					$options['ValidationGroup']=$hotspot->getValidationGroup();
-					$cs->renderClientControlScript($writer,$options);
+					$cs->registerPostBackControl('Prado.WebUI.TImageMap',$options);
 				}
 				$hotspot->render($writer);
 				$writer->writeLine();
@@ -117,15 +118,6 @@ class TImageMap extends TImage implements IPostBackEventHandler
 			}
 			$writer->renderEndTag();
 		}
-	}
-
-	/**
-	 * Renders the client-script code.
-	 */
-	protected function renderClientControlScript($writer,$options)
-	{
-		$cs = $this->getPage()->getClientScript();
-		$cs->registerPostBackControl('Prado.WebUI.TImageMap',$options);
 	}
 
 	/**
